# fgrep

./: .gitignore  CMakeLists.txt  grep_3.11-4.debian.tar.xz  grep_3.11-4.dsc
bench/: bench.sh
grep-3.11/: Makefile.in  aclocal.m4  config.h  config.status  configure
grep-3.11/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2
grep-3.11/doc/: Makefile.am  Makefile.in  grep.1  grep.in.1
grep-3.11/gnulib-tests/: Makefile.in  gnulib.mk
grep-3.11/gnulib-tests/.deps/: asnprintf.Po  c-strcasestr.Po  hash-pjw.Po  imaxtostr.Po  inttostr.Po  ioctl.Po  locale.Po  localename-table.Po  localename.Po  nanosleep.Po  offtostr.Po  printf-args.Po  printf-parse.Po  sockets.Po  strerror_r.Po  sys_socket.Po  test-localcharset.Po  time.Po  uinttostr.Po  umaxtostr.Po  vasnprintf.Po  xsize.Po  xstrtol-error.Po
grep-3.11/lib/: Makefile.in  dfa.c  stdlib.h
grep-3.11/lib/.deps/: fopen.Po  libgreputils_a-argmatch.Po  libgreputils_a-basename-lgpl.Po  libgreputils_a-binary-io.Po  libgreputils_a-bitrotate.Po  libgreputils_a-btowc.Po  libgreputils_a-c-ctype.Po  libgreputils_a-c-stack.Po  libgreputils_a-c-strcasecmp.Po  libgreputils_a-c-strncasecmp.Po  libgreputils_a-chdir-long.Po  libgreputils_a-cloexec.Po  libgreputils_a-close-stream.Po  libgreputils_a-closeout.Po  libgreputils_a-colorize.Po  libgreputils_a-creat-safer.Po  libgreputils_a-cycle-check.Po  libgreputils_a-dfa.Po  libgreputils_a-dirname-lgpl.Po  libgreputils_a-dup-safer-flag.Po  libgreputils_a-dup-safer.Po  libgreputils_a-exclude.Po  libgreputils_a-exitfail.Po  libgreputils_a-fcntl.Po  libgreputils_a-fd-hook.Po  libgreputils_a-fd-safer-flag.Po  libgreputils_a-fd-safer.Po  libgreputils_a-filenamecat-lgpl.Po  libgreputils_a-fts.Po  (+49 more)
grep-3.11/m4/: dirfd.m4
grep-3.11/po/: Makefile.in
grep-3.11/src/: Makefile.am  Makefile.in  egrep.sh  grep
grep-3.11/tests/: Makefile.in
include/: fgrep.h
src/: bmh_simd.c  bmh_simd.h  cpu.c  cpu.h  fileutil.c  fileutil.h  io.c  io.h  kwset_engine.c  main.c  output.c  output.h  regex_engine.c  regex_engine.h  search.c  search.h  simd.c  simd.h  threadpool.c  threadpool.h
tests/: test_bmh.c  test_integration.c  test_regex.c  test_simd.c
(+18 files in other folders)
